Improved the UI
I need to learn how to make a database system and integrate it with the app so I can have account creation and stuff like that.

Will be gone for a while. Brb.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,10 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.chatbox.client.MainActivity" android:screenOrientation="portrait" android:windowSoftInputMode = "adjustResize">
-            <intent-filter>
+        <activity android:name="com.example.client.MainActivity" android:screenOrientation="portrait" android:windowSoftInputMode="adjustResize">
+            <intent-filter>s
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
